syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Playground.GameCatalog.Api";

package GameCatalogApi;

service Catalog {
  rpc SimpleSemanticSearch (SimpleSemanticSearchRequest) returns (SimpleSemanticSearchResponse);
  rpc GenerateEmbeddings (google.protobuf.Empty) returns (stream GenerateEmbeddingsResponse);
  rpc SimpleRag (SimpleRagRequest) returns (SimpleRagResponse);
  rpc Chat (ChatResponse) returns (ChatRequest);
}

message Game {
  int32 Id = 1;
  string Title = 2;
  string Description = 3;
  double Score = 4;
}

message SimpleSemanticSearchRequest {
  string Query = 1;
}

message SimpleSemanticSearchResponse {
  repeated Game Items = 1;
}

message GenerateEmbeddingsResponse {
    int32 Processed = 1;
    int32 Total = 2;
}

message SimpleRagRequest {
  string SystemPrompt = 1; 
  string FewShotExamples = 2;
  string Question = 3;
}

message SimpleRagResponse {
  string Answer = 1;
  repeated string Sources = 2;
}

message ChatRequest {
  string ConversationId = 1;
  string SystemPrompt = 2;
  string Message = 3;
  repeated string History = 4;
}

message ChatResponse {
}